--- a/neighbourhood-map.html
+++ b/neighbourhood-map.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./css/main.css">
   <title>Neighbourhood Map</title>
 </head>
-<body>
-  <div class="container">
-    <div class="listView">
-      <form>
-        <input id="filterQuery" type="text" placeholder="Search"
-        data-bind="textInput: filterQuery">
-        <button type="button" name="Filter">Filter</button>
-        <ul data-bind="foreach: filteredLocationList">
-          <li><a href="#" data-bind="text: title"></a></li>
-        </ul>
-      </form>
-    </div>
-    <div id="map"></div>
-  </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="./js/model.js"></script>
-<script src="./js/main.js"></script>
-<script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMjoFTBUb6TgFmysGRAR2js7JxWqI9EVo&callback=initMap">
-</script>
+<body>
+  <span id="hamburger" onclick="openNav()">&#9776;</span>
+  <nav id="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <form>
+      <input id="filterQuery" type="text" placeholder="Search" data-bind="textInput: filterQuery">
+      <!-- <button type="button" name="Filter">Filter</button> -->
+      <ul data-bind="foreach: filteredLocationList">
+        <li><a href="#" data-bind="text: $data.title, click: onListItemClicked"></a></li>
+      </ul>
+    </form>
+  </nav>
+  <main id="main">
+    <div id="map"></div>
+  </main>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="./js/model.js"></script>
+  <script src="./js/main.js"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMjoFTBUb6TgFmysGRAR2js7JxWqI9EVo&callback=initMap">
+  </script>
+  <link rel="stylesheet" href="./css/main.css">
+  <script src="./js/styling.js"></script>
+
 
 </body>
+
 </html>
