--- a/neighbourhood-map.html
+++ b/neighbourhood-map.html
@@ -10,6 +10,7 @@
 
 <body>
   <span id="hamburger" onclick="openNav()">&#9776;</span>
+  <span>Parks in Bengaluru</span>
   <nav id="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <form>
